# msxiv

./: CMakeLists.txt  README.md  flake.nix
.ccls-cache/@@home@monday@devel@src@projects@msxiv-dseek/: @nix@store@4krab2h0hd4wvxxmscxrw21pl77j4i7j-gcc-13.3.0@include@c++@13.3.0@math.h.blob  @nix@store@4krab2h0hd4wvxxmscxrw21pl77j4i7j-gcc-13.3.0@include@c++@13.3.0@stdlib.h.blob  @nix@store@ijjkq4lvfvvyschhfmqy3p6ri89n1xb4-clang-14.0.6-lib@lib@clang@14.0.6@include@stdarg.h.blob  @nix@store@ijjkq4lvfvvyschhfmqy3p6ri89n1xb4-clang-14.0.6-lib@lib@clang@14.0.6@include@stddef.h.blob  @nix@store@lw21wr626v5sdcaxxkv2k4zf1121hfc9-glibc-2.40-36-dev@include@alloca.h.blob  @nix@store@lw21wr626v5sdcaxxkv2k4zf1121hfc9-glibc-2.40-36-dev@include@bits@atomic_wide_counter.h.blob  @nix@store@lw21wr626v5sdcaxxkv2k4zf1121hfc9-glibc-2.40-36-dev@include@bits@byteswap.h.blob  @nix@store@lw21wr626v5sdcaxxkv2k4zf1121hfc9-glibc-2.40-36-dev@include@bits@endian.h.blob  @nix@store@lw21wr626v5sdcaxxkv2k4zf1121hfc9-glibc-2.40-36-dev@include@bits@endianness.h.blob  @nix@store@lw21wr626v5sdcaxxkv2k4zf1121hfc9-glibc-2.40-36-dev@include@bits@floatn-common.h.blob  @nix@store@lw21wr626v5sdcaxxkv2k4zf1121hfc9-glibc-2.40-36-dev@include@bits@floatn.h.blob  @nix@store@lw21wr626v5sdcaxxkv2k4zf1121hfc9-glibc-2.40-36-dev@include@bits@flt-eval-method.h.blob  @nix@store@lw21wr626v5sdcaxxkv2k4zf1121hfc9-glibc-2.40-36-dev@include@bits@fp-fast.h.blob  @nix@store@lw21wr626v5sdcaxxkv2k4zf1121hfc9-glibc-2.40-36-dev@include@bits@fp-logb.h.blob  (+54 more)
src/: commands.c  commands.h  config.c  config.h  main.c  viewer.c  viewer.h
(+7 files in other folders)
